﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.11...]
### 2018-12-06
	Added: UI option to toggle exit confirmation.
	Fixed: Exit confirmation setting now respected.
	Changed: Info tab re-enabled. Still work in progress.
### 2018-12-05
	Fix: Ensure restore mode & method are set.
	Fix: Ensure process exit is detected properly and that they're cleaned up.
### 2018-12-04
	Changed: Internet checking changed to be faster and smarter. Testing still required to verify.
	Internal: Better cleanup of event handlers
	Internal: Code cleanup
### 2018-12-03
	Changed: Process debug is now more detailed with more info on process debug tab.
	Fixed: Processing counter occasionally forgot to decrement.
### 2018-12-02
	Changed: CPU sampler pausing is more thorough.
	Changed: Debug is less spammy.
	Added: Power configuration has little bit more tooltip details.
### 2018-11-29
	Fixed: Watchlist copy to clipboard option was not including some options.
### 2018-11-28
	Changed: Powerdown delay is untouched in the .ini to allow swapping back and forth between settings.
		It is now simply ignored when it is problematic.
	Fixed: Component configuration was severely outdated.
	Removed: Immediate configuration saving. It was causing bugs for no real benefits.
	Fixed: Some oddities in power config saving.
	Fixed: Powerdown delay logic was flipped.
### 2018-11-27
	Fixed: Show Inaction was showing debug info for things that were not explicitly enabled.
	Added: Monitor power and power mode during session lock options added to power config.
	Fixed: Incorrect reading of some command-line arguments, notably --bootdelay which ignored the supplied number.
	Fixed: --bootdelay was not actually used, now it is. Max delay is 5 minutes.
	Added: Proper launch behaviour support. Auto-adjust option in Core.ini deprecated in favor of better Behaviour option.
### 2018-11-25